PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Nov 2005, PHP 5.1
- Fixed bug #35342 (isset(DOMNodeList->length) returns false). (Rob)
- Fixed bug #35341 (Fix for bug #33760 breaks build with older curl). (Tony)
- Fixed bug #35303 (PDO prepare() crashes with invalid parameters). (Ilia)
- Fixed bug #35293 (PDO segfaults when using persistent connections). (Tony)
- Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
- Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
- Fixed bug #35243 (php_mblen() crashes when compiled with thread-safety
  on Linux). (Patch: shulmanb at il dot ibm dot com, Jani)
- Fixed bug #35143 (gettimeofday() ignores current time zone). (Derick)
- Fixed bug #35046 (phpinfo() uses improper css enclosure). (Ilia)
- Fixed bug #33732 (Wrong behavior of constants in class and interface
  extending). (Dmitry)
- Fixed bug #33153 (crash in mssql_next result). (Frank)
- Fixed bug #33963 (mssql_bind() fails on input parameters). (Frank)
- Fixed bug #33201 (Crash when fetching some data types). (Frank)
- Fixed bug #32009 (crash when mssql_bind() is called more than once). (Frank)

17 Nov 2005, PHP 5.1 Release Candidate 6
- Changed function parameter parsing to handle integers in a non-strict fashion
  and to emit an E_NOTICE on badly formed integer values. (Ilia)
- Fixed Apache 2 regression with sub-request handling on non-linux systems.
  (Ilia, Tony)
- Fixed bug #35249 (compile failure when ext/readline is compiled as shared).
  (Jani)
- Fixed bug #35248 (sqlite_query() doesnt set error_msg when return value is
  being used). (Ilia) 
- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
  blocking). (askalski at gmail dot com, Tony)

16 Nov 2005, PHP 5.1 Release Candidate 5
- Added an E_STRICT warning on the usage of {} for accessing of string offsets.
  (Ilia)